--- a/PresentationP.html
+++ b/PresentationP.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Præsentationsportfolio</title>
-    <link rel="stylesheet" href="præsentation.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="praesentation.css">
+
+    
 </head>
 
 <body>
-
     <header>
         <nav class="navbar">
-            <img src="Logo E.K.png" alt="Mit Logo" class="Logo">
+            <img src="Logo.hvid.png" alt="Mit Logo" class="Logo">
             <ul class="navlinks">
                 <li><a href="forside">Forside</a></li>
                 <li><a href="om mig">Om mig</a></li>
