Boks til image og tekst
Tilføjet og byttet rundt/står på hver sin side

--- a/PresentationP.html
+++ b/PresentationP.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da"> <!--sprog og direction du skriver i, left to right-->
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!--europæiske tegnkodning-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Tilpasser siden til forskellige enheders størrelser-->
     <title>Præsentationsportfolio</title>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="praesentation.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+    <!--link til font-->
+    <link rel="stylesheet" href="praesentation.css"> <!--link til css fil-->
 
-    
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <img src="Logo.hvid.png" alt="Mit Logo" class="Logo">
+    <header> <!--side hoved med navigation-->
+        <nav class="navbar"> <!--navigationens container-->
+            <img src="Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            
+            <!--liste med menuens links-->
             <ul class="navlinks">
                 <li><a href="forside">Forside</a></li>
                 <li><a href="om mig">Om mig</a></li>
@@ -24,6 +27,17 @@
             </ul>
         </nav>
     </header>
+
+<section class="hero"> <!--sektion stykke til tekst-->
+        <div class="hero-text"> <!--tekst-boks i venstre side-->
+            <h1>Design der løfter Skønhedsbranchen</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Jeg kombinerer æstetik, feminime nuacner og digital design,
+            som skaber visuelle oplevelser med elegance og ro.</p>
+        </div>
+         <div class="hero-image"></div> <!--container til billede-->
+</section>
 
 </body>
 </html>
