img og tekststykke
img og tekst tilføjet og færdiggjort

--- a/PresentationP.html
+++ b/PresentationP.html
@@ -34,9 +34,12 @@
             <!--brødtekst--> 
             <br> 
             <p>Jeg kombinerer æstetik, feminime nuacner og digital design,
-            som skaber visuelle oplevelser med elegance og ro.</p>
+            som skaber visuelle oplevelser med ro og elegance. Mit fokus er at
+            fremhæve skønhed på en smuk og simpel måde.</p>
         </div>
-         <div class="hero-image"></div> <!--container til billede-->
+         <div class="hero-image"><!--container til billede-->
+            <img src="Billede forside.webp" alt="Mit billede">
+        </div> 
 </section>
 
 </body>
