Min afslutende personlige maring
E.K

--- a/PresentationP.html
+++ b/PresentationP.html
@@ -42,5 +42,11 @@
         </div> 
 </section>
 
+<!--afsluttende signatur (min personlige markering)-->
+<section class="signature">
+    <div class="sig-line"></div>
+    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> 
+</section>
+
 </body>
 </html>
