footer + om mig side

--- a/PresentationP.html
+++ b/PresentationP.html
@@ -48,5 +48,9 @@
     <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> 
 </section>
 
+<footer class="footer">
+    <p>2025 Ela Köycü - Multimediedesigner</p>
+</footer>
+
 </body>
 </html>
