--- a/PresentationP.html
+++ b/PresentationP.html
@@ -20,10 +20,10 @@
             
             <!--liste med menuens links-->
             <ul class="navlinks">
-                <li><a href="forside">Forside</a></li>
-                <li><a href="om mig">Om mig</a></li>
+                <li><a href="PresentationP.html">Forside</a></li>
+                <li><a href="Ommig.html">Om mig</a></li>
                 <li><a href="projekter">Projekter</a></li>
-                <li><a href="kontakr">Kontakt</a></li>
+                <li><a href="kontakt">Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -44,10 +44,11 @@
 
 <!--afsluttende signatur (min personlige markering)-->
 <section class="signature">
-    <div class="sig-line"></div>
-    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> 
+    <div class="sig-line"></div> <!--tynd linje-->
+    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
 </section>
 
+<!--footer nederst på side med navn og udannelse-->
 <footer class="footer">
     <p>2025 Ela Köycü - Multimediedesigner</p>
 </footer>
