Opdateringer på om mig

--- a/Ommig.html
+++ b/Ommig.html
@@ -38,9 +38,9 @@
         <div class="img-box"></div>
     </section>
 
-    <section class="Præsentation">
+    <section class="Praesentation">
 
-        <p><span class="bold">Hej, Mit navn er Ela og arbjeder som Multimediedesigner.</span> 
+        <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner.</span> 
             <br>
             Jeg elsker at arbjede med kreativitet og digital design, herfra er mit mål at skabe et rum, 
             hvor mine idéer bliver til oplevelser.</p>
@@ -50,7 +50,12 @@
         Instagram og Pinterest til at udforske trends, farver og andre former for visuelle udtryk.</p>
         <p> Mit mål er at skabe visuelle løsninger, som kan fremhæve det skjulte skønhed, særligt for brands i Skønhedsbranchen.
             Her skaber jeg et rum, hvor elegance, klarhed og identitet er i fokus.</p>
-    </section>
+        <div class="split-line"></div>
+        <h2>Min Baggrund</h2>
+        <br>
+        <p>Skriver om min udannelse og erfaringer...</p>
+     </section>
+
 
     <!--afsluttende signatur (min personlige markering)-->
     <section class="signature">
@@ -62,6 +67,7 @@
     <footer class="footer">
     <p>2025 Ela Köycü - Multimediedesigner</p>
     </footer>
+
 
 </body>
 </html>
