--- a/Ommig.html
+++ b/Ommig.html
@@ -28,20 +28,23 @@
         </nav>
     </header>
 
+    <!--min om mig side-->
     <section class="Om">
         <h1>Om mig</h1>
     </section>
 
+    <!--her kommer der nogle billeder af mig senere/container til img-->
     <section class="om-imgs">
         <div class="img-box"></div>
         <div class="img-box"></div>
         <div class="img-box"></div>
     </section>
 
+    <!--tekst stykke under mine billeder-->
     <section class="Praesentation">
-
+        <!--bruger span for at gøre 1 linje bold-->
         <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner.</span> 
-            <br>
+            <br> <!--break-->
             Jeg elsker at arbjede med kreativitet og digital design, herfra er mit mål at skabe et rum, 
             hvor mine idéer bliver til oplevelser.</p>
             <br>
@@ -50,7 +53,7 @@
         Instagram og Pinterest til at udforske trends, farver og andre former for visuelle udtryk.</p>
         <p> Mit mål er at skabe visuelle løsninger, som kan fremhæve det skjulte skønhed, særligt for brands i Skønhedsbranchen.
             Her skaber jeg et rum, hvor elegance, klarhed og identitet er i fokus.</p>
-        <div class="split-line"></div>
+        <div class="split-line"></div> <!--tynd splitlinje-->
         <h2>Min Baggrund</h2>
         <br>
         <p>Skriver om min udannelse og erfaringer...</p>
