justeringer om mig

--- a/Ommig.html
+++ b/Ommig.html
@@ -43,6 +43,8 @@
     <!--tekst stykke under mine billeder-->
     <section class="Praesentation">
         <!--bruger span for at gøre 1 linje bold-->
+        <h3>Hvem er jeg?</h3>
+        <br>
         <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner.</span> 
             <br> <!--break-->
             Jeg elsker at arbjede med kreativitet og digital design, herfra er mit mål at skabe et rum, 
@@ -54,7 +56,7 @@
         <p> Mit mål er at skabe visuelle løsninger, som kan fremhæve det skjulte skønhed, særligt for brands i Skønhedsbranchen.
             Her skaber jeg et rum, hvor elegance, klarhed og identitet er i fokus.</p>
         <div class="split-line"></div> <!--tynd splitlinje-->
-        <h2>Min Baggrund</h2>
+        <h3>Min Baggrund</h3>
         <br>
         <p>Skriver om min udannelse og erfaringer...</p>
      </section>
