tilføjet img - lavet slide container til 1 projekt

--- a/Ommig.html
+++ b/Ommig.html
@@ -22,7 +22,7 @@
             <ul class="navlinks">
                 <li><a href="PresentationP.html">Forside</a></li>
                 <li><a href="Ommig.html">Om mig</a></li>
-                <li><a href="projekter">Projekter</a></li>
+                <li><a href="Projekter.html">Projekter</a></li>
                 <li><a href="kontakt">Kontakt</a></li>
             </ul>
         </nav>
