Har ændre de andre slides på projekt side
Har ændret dem til img istedet, hvor jeg senere bare vil ligge et billede ind istedet

--- a/Projekter.html
+++ b/Projekter.html
@@ -33,6 +33,11 @@
     <h1>Seneste projekter</h1>
     </section>
 
+
+    
+
+    <!--PRODUKTFOTO PROJEKT-->
+
     <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
         <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
             <h1>Produkt fotografering</h1> <!--Overskrift-->
@@ -83,5 +88,135 @@ document.querySelector(".prev").addEventListener("click", () => {
 });
 </script>
 
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+
+
+
+<!--INSTAREEL PROJEKT-->
+
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>SO-ME InstagramReel</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Kort tekst til projektet</p>
+        </div>
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+</section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+
+
+
+<!--BEAUTY APP PROJEKT-->
+
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>Beauty App Projekt</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Kort tekst til projektet</p>
+        </div>
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+</section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+
+
+
+<!--REKLAMEPLAKAT PROJEKT-->
+
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>Reklameplakat for KIKO MILANO</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Kort tekst til projektet</p>
+        </div>
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+</section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+
+
+
+<!--PROTRÆT BILLEDE PROJEKT-->
+    
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>Protrætbilleder</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Kort tekst til projektet</p>
+        </div>
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+</section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+
+
+
+<!--Instagram profil-->
+
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>Instagram profil</h1> <!--Overskrift-->
+            <!--brødtekst--> 
+            <br> 
+            <p>Kort tekst til projektet</p>
+        </div>
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+</section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
+</section>
+
+    <!--afsluttende signatur (min personlige markering)-->
+    <section class="signature">
+    <div class="sig-line"></div> <!--tynd linje-->
+    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    </section>
+
+    <!--footer nederst på side med navn og udannelse-->
+    <footer class="footer">
+    <p>2025 Ela Köycü - Multimediedesigner</p>
+    </footer>
 </body>
 </html>
