tilføjet kontakt side + skift af img forside

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -28,30 +28,25 @@
         </nav>
     </header>
 
-<section class="hero"> <!--sektion stykke til tekst-->
-        <div class="hero-text"> <!--tekst-boks i venstre side-->
-            <h1>Design der løfter Skønhedsbranchen</h1> <!--Overskrift-->
+    <!--Overskrift til projekt-siden-->
+    <section class="Projekter">
+    <h1>Kontakt mig</h1>
+    </section>
+
+    <section class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
+        <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
+            <h1>Kontaktoplysninger</h1> <!--Overskrift-->
             <!--brødtekst--> 
             <br> 
-            <p>Jeg kombinerer æstetik, feminime nuacner og digital design,
-            som skaber visuelle oplevelser med ro og elegance. Mit fokus er at
-            fremhæve skønhed på en smuk og simpel måde.</p>
+            <p>Kort tekst til projektet</p>
         </div>
-         <div class="hero-image"><!--container til billede-->
-            <img src="Billede forside 2.webp" alt="Mit billede">
-        </div> 
+        <!--container til billed-slider-->
+         <div class="Pimg1">
+            <img src="Kikoblush.webp" class="projektbillede"> 
+     </div> 
+    </section>
+
+<!--splitlinje mellem projekter-->
+<section>
+    <div class="split-line2"></div> <!--tynd splitlinje-->
 </section>
-
-<!--afsluttende signatur (min personlige markering)-->
-<section class="signature">
-    <div class="sig-line"></div> <!--tynd linje-->
-    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-</section>
-
-<!--footer nederst på side med navn og udannelse-->
-<footer class="footer">
-    <p>2025 Ela Köycü - Multimediedesigner</p>
-</footer>
-
-</body>
-</html>
