--- a/Projekter.html
+++ b/Projekter.html
@@ -23,7 +23,7 @@
                 <li><a href="PresentationP.html">Forside</a></li>
                 <li><a href="Ommig.html">Om mig</a></li>
                 <li><a href="Projekter.html">Projekter</a></li>
-                <li><a href="kontakt">Kontakt</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
     </section>
 
 
-    
+
 
     <!--PRODUKTFOTO PROJEKT-->
 
