--- a/Projekter.html
+++ b/Projekter.html
@@ -20,10 +20,10 @@
             
             <!--liste med menuens links-->
             <ul class="navlinks">
-                <li><a href="PresentationP.html">Forside</a></li>
-                <li><a href="Ommig.html">Om mig</a></li>
-                <li><a href="Projekter.html">Projekter</a></li>
-                <li><a href="Kontakt.html">Kontakt</a></li>
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="ommig.html">Om mig</a></li>
+                <li><a href="projekter.html">Projekter</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
