--- a/Ommig.html
+++ b/Ommig.html
@@ -20,10 +20,10 @@
             
             <!--liste med menuens links-->
             <ul class="navlinks">
-                <li><a href="PresentationP.html">Forside</a></li>
-                <li><a href="Ommig.html">Om mig</a></li>
-                <li><a href="Projekter.html">Projekter</a></li>
-                <li><a href="Kontakt.html">Kontakt</a></li>
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="ommig.html">Om mig</a></li>
+                <li><a href="projekter.html">Projekter</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +45,7 @@
         <!--bruger span for at gøre 1 linje bold-->
         <h3>Hvem er jeg?</h3>
         <br>
-        <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner.</span> 
+        <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner..</span> 
             <br> <!--break-->
             Jeg elsker at arbjede med kreativitet og digital design, herfra er mit mål at skabe et rum, 
             hvor mine idéer bliver til oplevelser.</p>
