tilføjet klik knap på projektside + leget med farver

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -56,8 +56,16 @@
             <button type="submit">Send besked</button>
         </form>
     </section>
+    
+<!--afsluttende signatur (min personlige markering)-->
+    <section class="signature">
+    <div class="sig-line"></div> <!--tynd linje-->
+    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    </section>
 
-<!--splitlinje mellem projekter-->
-<section>
-    <div class="split-line2"></div> <!--tynd splitlinje-->
-</section>
+    <!--footer nederst på side med navn og udannelse-->
+    <footer class="footer">
+    <p>2025 Ela Köycü - Multimediedesigner</p>
+    </footer>
+</body>
+</html>
