--- a/Projekter.html
+++ b/Projekter.html
@@ -44,7 +44,10 @@
             <!--brødtekst--> 
             <br> 
             <p>Kort tekst til projektet</p>
+
+            <a href="produktfotografering.html" class="projekt-knap">Klik her</a>
         </div>
+
         <!--container til billed-slider-->
          <div class="Pimg1">
             <div class="slider">
@@ -61,6 +64,8 @@
         </div> 
      </div> 
 </section>
+
+
 
 <!--javascript delen - gør slider interaktiv-->
 <script>
@@ -92,6 +97,7 @@ document.querySelector(".prev").addEventListener("click", () => {
 <section>
     <div class="split-line2"></div> <!--tynd splitlinje-->
 </section>
+
 
 
 
