små ændringer + tekst

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -16,7 +16,7 @@
 <body>
     <header> <!--side hoved med navigation-->
         <nav class="navbar"> <!--navigationens container-->
-            <img src="Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            <img src="image/Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
             
             <!--liste med menuens links-->
             <ul class="navlinks">
@@ -56,11 +56,11 @@
             <button type="submit">Send besked</button>
         </form>
     </section>
-    
+
 <!--afsluttende signatur (min personlige markering)-->
     <section class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
-    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
     </section>
 
     <!--footer nederst på side med navn og udannelse-->
