--- a/Ommig.html
+++ b/Ommig.html
@@ -16,7 +16,7 @@
 <body>
     <header> <!--side hoved med navigation-->
         <nav class="navbar"> <!--navigationens container-->
-            <img src="Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            <img src="image/Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
             
             <!--liste med menuens links-->
             <ul class="navlinks">
@@ -34,10 +34,8 @@
     </section>
 
     <!--her kommer der nogle billeder af mig senere/container til img-->
-    <section class="om-imgs">
-        <div class="img-box"></div>
-        <div class="img-box"></div>
-        <div class="img-box"></div>
+    <section class="omimg">
+        <img src="image/ommig2.webp" class="om-billede">
     </section>
 
     <!--tekst stykke under mine billeder-->
@@ -58,14 +56,17 @@
         <div class="split-line"></div> <!--tynd splitlinje-->
         <h3>Min Baggrund</h3>
         <br>
-        <p>Skriver om min udannelse og erfaringer...</p>
+        <p>Jeg har studeret multimediedesign, hvor jeg gennem uddannelsen har opbygget erfaring indenfor
+            digital design, brugeroplevelser og visuel identitet. Ved hjælp af disse kompetencer, elsker jeg at fortælle historier og følelser
+            gennem design - Især med alt den inspiration jeg finder i Skønhedsbranchen, som jeg tager med mig og gerne skaber nye og større projekter ud fra.
+        </p>
      </section>
 
 
     <!--afsluttende signatur (min personlige markering)-->
     <section class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
-    <img src="Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
     </section>
 
     <!--footer nederst på side med navn og udannelse-->
