--- a/beautyapp.html
+++ b/beautyapp.html
@@ -28,30 +28,37 @@
         </nav>
     </header>
 
-<section class="hero"> <!--sektion stykke til tekst-->
-        <div class="hero-text"> <!--tekst-boks i venstre side-->
-            <h1>Design der løfter Skønhedsbranchen</h1> <!--Overskrift-->
-            <!--brødtekst--> 
-            <br> 
-            <p>Jeg kombinerer æstetik, feminime nuacner og digital design,
-            som skaber visuelle oplevelser med ro og elegance. Mit fokus er at
-            fremhæve skønhed på en smuk og simpel måde.</p>
-        </div>
-         <div class="hero-image"><!--container til billede-->
-            <img src="image/Billede forside 2.webp" alt="Mit billede">
-        </div> 
-</section>
+    <!--Overskrift til projekt-siden-->
+    <section class="app-projekt">
+    <h1>The Beauty Club</h1>
 
-<!--afsluttende signatur (min personlige markering)-->
-<section class="signature">
+    <section class="Pfoto-tekst">
+        <p>
+        Ud fra min egen interesse for makeup, hudpleje og hårprodukter, ønskede jeg at designe en app, hvor man både
+        kan finde alle de produkter, som man søger efter, men samtidig også få en følelse af inspiration og behag. 
+        Gennem appen kan brugeren opdage nye favoritter og gemme produkter, finde inspiration og nemt bestille hjem. 
+        Mange beautyshops sælger ikke altid alt hvad man søger efter, hvor det kunne være nemmere med et shop, der sælger
+        alt hvad man har brug for.
+        </p>
+        <img src="image/Beautyapp 1.webp" alt="Produktfoto" class="rhode-billede">
+        <p>
+            Efter at have tegnet mine wireframes i hånden, fortsatte jeg processen i programmet Figma, som er en digital designværktøj, 
+            hvor jeg kan skabe prototyper og grafiske layouts.
+            Her fik jeg designet og opstillet appen, hvor min fokus mest har været på at skabe et roligt og feminint stemning.
+            Herfra et simpelt design, hvor funktionerne i appen føles overskuelige og brugervenlige. 
+        </p> 
+          <img src="image/Beautyapp 2.webp" alt="Produktfoto" class="rhode-billede">
+    </section>
+
+    <!--afsluttende signatur (min personlige markering)-->
+    <section class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
     <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-</section>
+    </section>
 
-<!--footer nederst på side med navn og udannelse-->
-<footer class="footer">
+    <!--footer nederst på side med navn og udannelse-->
+    <footer class="footer">
     <p>2025 Ela Köycü - Multimediedesigner</p>
-</footer>
-
+    </footer>
 </body>
 </html>
