justeringer, tekstænringer, pynte

--- a/Ommig.html
+++ b/Ommig.html
@@ -43,23 +43,42 @@
         <!--bruger span for at gøre 1 linje bold-->
         <h3>Hvem er jeg?</h3>
         <br>
-        <p><span class="bold">Hej, mit navn er Ela og arbjeder som Multimediedesigner..</span> 
+        <p><span class="bold">Hej, mit navn er Ela og arbejder som Multimediedesigner..</span> 
             <br> <!--break-->
-            Jeg elsker at arbjede med kreativitet og digital design, herfra er mit mål at skabe et rum, 
-            hvor mine idéer bliver til oplevelser.</p>
+            Jeg elsker at arbjede med kreativitet og digital design, og mit mål er at skabe et rum, 
+            hvor mine idéer bliver til store oplevelser.</p>
             <br>
-        <p>Jeg bliver meget inspireret af æstetikken bag modeverdenen, magasiner og fotografering, som vi tit møder i vores hverdage. 
-        Jeg har altid været den faverige person i rummet, hvor jeg ofte bruger platforme som
-        Instagram og Pinterest til at udforske trends, farver og andre former for visuelle udtryk.</p>
-        <p> Mit mål er at skabe visuelle løsninger, som kan fremhæve det skjulte skønhed, særligt for brands i Skønhedsbranchen.
-            Her skaber jeg et rum, hvor elegance, klarhed og identitet er i fokus.</p>
+        <p>Jeg bliver meget inspireret af æstetikken i modeverdenen, magasiner og fotografering, som vi tit møder i hverdagen. 
+        Jeg har altid været den faverige person i rummet, og ofte bruger jeg platforme som
+        Instagram og Pinterest til at udforske trends, farver og nye visuelle udtryk.</p>
+        <p> Jeg vil gerne skabe visuelle løsninger, som kan fremhæve det skjulte skønhed, særligt for brands i Skønhedsbranchen.
+            Jeg arbejder med klarhed, elegance og identitet, som er mine fokuspunkter, når jeg desiger.</p>
         <div class="split-line"></div> <!--tynd splitlinje-->
         <h3>Min Baggrund</h3>
         <br>
         <p>Jeg har studeret multimediedesign, hvor jeg gennem uddannelsen har opbygget erfaring indenfor
-            digital design, brugeroplevelser og visuel identitet. Ved hjælp af disse kompetencer, elsker jeg at fortælle historier og følelser
-            gennem design - Især med alt den inspiration jeg finder i Skønhedsbranchen, som jeg tager med mig og gerne skaber nye og større projekter ud fra.
+            digital design, brugeroplevelser og visuel identitet. Jeg elsker at fortælle historier og følelser
+            gennem design - Især med alt den inspiration jeg finder i Skønhedsbranchen, som jeg tager med mig.
         </p>
+        <br>
+        <br>
+        <br>
+        <br>
+     </section>
+
+     <section class="kompetencer">
+       <h3>Mine It-Kompetencer</h3>
+     </section>
+
+     <section>
+       <div class="kom-tags">
+        <span>Adobe Photoshop</span>
+        <span>Adobe Lightroom Classic</span>
+        <span>Adobe InDesign</span>
+        <span>Figma</span>
+        <span>After Effects</span>
+        <span>Html & CSS</span>
+       </div>
      </section>
 
 
