--- a/Projekter.html
+++ b/Projekter.html
@@ -68,7 +68,7 @@
             <img src="image/Redigeret palette.webp" class="slide">
             <img src="image/Redigeret beautyJ.webp" class="slide">
             <img src="image/Redigeret beautyJ2.webp" class="slide">
-            <img src="images/Redigeret kikolips.webp" class="slide">
+            <img src="image/Redigeret kikolips.webp" class="slide">
                 <button class="next">›</button> <!--højre pil-->
         </div> 
      </div> 
@@ -115,11 +115,11 @@ document.querySelector(".prev").addEventListener("click", () => {
 
     <section id="p2" class="Pimg1-tekstboks"> <!--sektion stykke til tekst-->
         <div class="Pimg1-tekst"> <!--tekst-boks i venstre side-->
-            <h1>SO-ME InstagramReel</h1> <!--Overskrift-->
+            <h1>SO-ME InstagramReel 📹</h1> <!--Overskrift-->
             <!--brødtekst--> 
             <br> 
-            <p>Her har jeg ved hjælp af Instagram lavet en lille GRWM video, som mange unge piger og kvinder elsker at se
-                og hente inspiration fra på sociale medier ♡
+            <p> Gennem Instagram har jeg lavet en lille GRWM video, som unge piger og kvinder elsker at se
+                og hente inspiration fra på sociale medier.
                 
         </div>
         <!--container til billed-slider-->
@@ -143,13 +143,13 @@ document.querySelector(".prev").addEventListener("click", () => {
             <h1>Beauty App Projekt</h1> <!--Overskrift-->
             <!--brødtekst--> 
             <br> 
-            <p>En lille app-idé med fokus på at skabe en æstetisk og brugervenlig app til de beauty interesserede.</p>
+            <p>App-idé med fokus på at skabe en æstetisk og brugervenlig app til alle beauty interesserede.</p>
             <a href="beautyapp.html" class="projekt-knap">Klik her</a>
         </div>
 
             <!--container til billed-slider-->
          <div class="Pimg1">
-            <img src="image/The beauty app.webp" class="projektbillede"> 
+            <img src="image/Beautyapp 2.webp" class="projektbillede"> 
     
         </div> 
 </section>
@@ -171,10 +171,10 @@ document.querySelector(".prev").addEventListener("click", () => {
             KIKO MILANO</h1> <!--Overskrift-->
             <!--brødtekst--> 
             <br> 
-            <p> Jeg har udarbejdet en reklameplakat i Adobe Indesign, hvor jeg primært har forkuseret
-                på layout, fonts og farvevalg. Produktbilledet er mit eget foto, som jeg har taget og redigeret i Adobe Lightroom Classic,
-                for at fremhæve nuancerne og give et mere æstetisk og rent look. Jeg valgte dette produkt, da
-                den bordeauxrøde farve står i smuk kontrast til baggrunden, og skaber den perfekte efterårsstemning!
+            <p> En reklameplakat lavet i Adobe Indesign, hvor jeg har forkuseret
+                på layout, fonts og farvevalg. Produktbilledet er mit eget foto, som jeg har taget og redigeret i Adobe Lightroom Classic.
+                Her fremhæver jeg nuancerne og giver billedet et mere æstetisk og rent look. Jeg valgte dette produkt, da
+                den bordeauxrøde farve står i smuk kontrast til baggrunden - Den perfekte efterårsstemning!
             </p>
         </div>
         <!--container til billed-slider-->
@@ -224,11 +224,12 @@ document.querySelector(".prev").addEventListener("click", () => {
             <h1>ToV IG-opslag</h1> <!--Overskrift-->
             <!--brødtekst--> 
             <br> 
-            <p>Kort tekst til projektet</p>
+            <p>Et Instagram opslag, hvor jeg har arbejdet med Tone of Voice (ToV) - Kommunikationen mellem brandet og målgruppen.</p>
+            <a href="toneofvoice.html" class="projekt-knap">Klik her</a>
         </div>
         <!--container til billed-slider-->
          <div class="Pimg1">
-            <img src="Kikoblush.webp" class="projektbillede"> 
+            <img src="image/Kikolipgloss.jpeg" class="projektbillede"> 
      </div> 
 </section>
 
