--- a/beautyapp.html
+++ b/beautyapp.html
@@ -33,21 +33,14 @@
     <h1>The Beauty Club</h1>
 
     <section class="Pfoto-tekst">
-        <p>
-        Ud fra min egen interesse for makeup, hudpleje og hårprodukter, ønskede jeg at designe en app, hvor man både
-        kan finde alle de produkter, som man søger efter, men samtidig også få en følelse af inspiration og behag. 
-        Gennem appen kan brugeren opdage nye favoritter og gemme produkter, finde inspiration og nemt bestille hjem. 
-        Mange beautyshops sælger ikke altid alt hvad man søger efter, hvor det kunne være nemmere med et shop, der sælger
-        alt hvad man har brug for.
-        </p>
         <img src="image/Beautyapp 1.webp" alt="Produktfoto" class="rhode-billede">
         <p>
-            Efter at have tegnet mine wireframes i hånden, fortsatte jeg processen i programmet Figma, som er en digital designværktøj, 
-            hvor jeg kan skabe prototyper og grafiske layouts.
-            Her fik jeg designet og opstillet appen, hvor min fokus mest har været på at skabe et roligt og feminint stemning.
-            Herfra et simpelt design, hvor funktionerne i appen føles overskuelige og brugervenlige. 
-        </p> 
-          <img src="image/Beautyapp 2.webp" alt="Produktfoto" class="rhode-billede">
+        Med min interesse for makeup, hudpleje og hårprodukter ønskede jeg at designe en beauty-app, 
+        som solgte alle søgte proukter ét sted, og samtidig giver brugeren en inspirende og positiv oplevelse. Gennem appen kan man
+        nemt opdage nye produkter, like dem og bestille dem hjem. Med dette var målet at skabe noget inspirende, men
+        også brugebart, da mange beautyshops ikke altid har alt, hvad man søger efter.
+        </p>
+        <a href="https://www.figma.com/design/4xYpBCtxwnlpgnC8QRHdEW/Beauty-App-projekt?node-id=3-6&t=a154ly4CwmNkak7I-1" class="figma-knap">Se projekt</a>
     </section>
 
     <!--afsluttende signatur (min personlige markering)-->
