--- a/toneofvoice.html
+++ b/toneofvoice.html
@@ -28,35 +28,37 @@
         </nav>
     </header>
 
-<section class="hero"> <!--sektion stykke til tekst-->
-        <div class="hero-text"> <!--tekst-boks i venstre side-->
-            <h1>Design der løfter Skønhedsbranchen 💋</h1> <!--Overskrift-->
-            <!--brødtekst--> 
-            <br> 
-            <p>Jeg kombinerer æstetik, feminime nuacner og digital design,
-            som skaber visuelle oplevelser med ro og elegance. Mit fokus er at
-            fremhæve skønhed på en smuk og simpel måde.</p>
+    <!--Overskrift til projekt-siden-->
+    <section class="Projekter">
+    <h1>Tone of Voice (ToV)</h1>
+    </section>
+
+    <section class="Pfoto-tekst">
+        <p>
+        Jeg har arbejdet med Tone of Voice med udgangspunkt i min målgruppe: 
+        <br>
+        Unge piger og kvinder, der interesserer sig for makeup og følger med i skønhedsbranchen på sociale medier.
+        Med dette har jeg forkuseret på at arbejde med en æstetisk og feminin tone, som matcher både billedets stil og målgruppens
+        interesser. Billedet nedenfor viser et eksempel på dette:<br><br>Et Instagram opslag, hvor nye Kiko Milano produkter præsenteres!
+        <div class="ToVopslagBox">
+        <img src="image/ToVopslag.webp" alt="Produktfoto 1" class="ToVopslag">
         </div>
-         <div class="hero-image"><!--container til billede-->
-            <img src="image/Billede forside 2.webp" alt="Mit billede">
-        </div> 
+        <p>
+            I mit opslag forkuserer jeg på et inspirende og positivt sprog. Da Instagram er en platform, hvor brugerne scroller hurtigt
+            gennem appen, er det vigtigt at fange målgruppens opmærksomhed med korte og iøjefaldende budskaber. Brugen af emojis, korte sætninger og catchy
+            ord skaber nærvær, og understøtter brandets visuelle udtryk. 
+        </p>
+    </section>
 
-</section>
-
-<section class="designtext">
-    <p>Digital design  •  Aesthetics  •  Feminine details</p>
-</section>
-
-<!--afsluttende signatur (min personlige markering)-->
-<section class="signature">
+    <!--afsluttende signatur (min personlige markering)-->
+    <section class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
     <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-</section>
+    </section>
 
-<!--footer nederst på side med navn og udannelse-->
-<footer class="footer">
+    <!--footer nederst på side med navn og udannelse-->
+    <footer class="footer">
     <p>2025 Ela Köycü - Multimediedesigner</p>
-</footer>
-
+    </footer>
 </body>
 </html>
