--- a/produktfotografering.html
+++ b/produktfotografering.html
@@ -34,27 +34,17 @@
     </section>
 
     <section class="Pfoto-tekst">
-        <p>
-        I dette projekt har jeg arbedet med produktfotografering. Her forkuserede jeg på de rene og skarbe billeder,
-        hvor det valgte skønhedsprodukt kunne fremstå æstetisk og er i fokus. Til selve fotografering brugte jeg et Sony A7III m. 28-70 OSS, som kan give
-        høj billedekvalitet, og kan hjælpe med præcis kontrol over fokus, lys og dybdeskarphed.
-        Billederne blev taget i et simpelt, men effektivt studie setup. Her legede jeg med lyset, fokuseret på en neutral/ren baggrund
-        og brugte et stativ for at sikre mine billede blev stabile og kontroleret. Dette styrkede kompositionen og belysningen, 
-        så produktet både blev fremhævet, men samtidig fik en naturlig glans uden tunge og mørke skygger.
-        </p>
         <img src="image/Redigeret rhode2.webp" alt="Produktfoto" class="rhode-billede">
         <p>
-            Undervejs lærte jeg at små ændringer i lyset eller afstanden mellem kamera og baggrund kan ændre stemningen 
-            og kvaliteten i billedet markant. Derfor var det vigtigt at teste, de forskellige vinkler og opsætninger af,
-            for at finde den helt perfekte setup til produktbillederne.
-            Efter fotograferingen redigerede jeg billederne i Adobe Lightroom Classic. Her arbejdede jeg på eksponering, highlights, kontrast,
-            skygger, tekstur og klarhed. Hver instilling tilpassede jeg efter med fokusset på at fremhæve produktets detaljer, og derfra få
-            det til at se rent og æstetik ud. 
-            Redigeringen er en vigtig del af denne proces, da den må en måde finpudser og forbedre det visuelle udtryk. Samtidig giver det, at billederne
-            kunne bruges i professionelle sammenhænge som reklamer, SoMo (som Instagram eller Tiktok) og webshops.
+        I dette projekt arbejdede jeg med produktfotografering med fokus på rene og skarpe billeder
+        af skøndhedsproduktet. Målet med det var at skabe et æstetisk og professionelt udtryk, der fremhæver produktets
+        detaljer. 
+        Jeg arbejdede i et simpelt studie-setup, hvor billederne blev taget i høj billedkvalitet, hvor jeg havde kontrol over lyset og dybdeskarphed.
+        Efterfølgende redigerede jeg billederne i Adobe Lightroom Classic, hvor jeg blandt andet legede med
+        kontrast, highlights, klarhed og skygger - Dette fremhæver produktets fine detaljer og skaber et rent og æstetisk billede.
         </p>
     </section>
-    
+
 
     <!--afsluttende signatur (min personlige markering)-->
     <section class="signature">
